Fixed followers and following lists not closing if too big

--- a/frontend/src/components/Modal.css
+++ b/frontend/src/components/Modal.css
@@ -9,15 +9,18 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.4);
+  overflow: auto; /* Add this line */
 }
 
 .modal-content {
   background-color: #fefefe;
-  margin: 15% auto;
+  margin: 15% auto; /* Change this line */
   padding: 20px;
   border: 1px solid #888;
   width: 80%;
   position: relative;
+  max-height: 70vh; /* Add this line */
+  overflow: auto; /* Add this line */
 }
 
 .close {
